# arnak

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: api.rs  error.rs  escape_xml.rs  lib.rs  query_param.rs
src/deserialize/: mod.rs
src/endpoints/: accessory.rs  accessory_models.rs  collection.rs  collection_models.rs  forum.rs  forum_group.rs  forum_group_models.rs  forum_models.rs  game.rs  game_family.rs  game_family_models.rs  game_models.rs  guild.rs  guild_models.rs  hot_list.rs  hot_list_models.rs  mod.rs  models.rs  plays.rs  plays_models.rs  search.rs  search_models.rs  thread.rs  thread_models.rs  user.rs  user_models.rs
src/utils/: deserialize.rs  mod.rs
test_data/: collection_multiple.xml
test_data/accessory/: accessory.xml  accessory_full.xml
test_data/collection/: collection_accessories.xml  collection_brief_owned_single.xml  collection_brief_with_version.xml  collection_minimal_game.xml  collection_multiple.xml  collection_owned_single.xml  collection_owned_with_stats.xml  collection_wishlist_single.xml  empty_collection.xml
test_data/forum/: forum.xml
test_data/forum_group/: family_forum_group.xml  thing_forum_group.xml
test_data/game/: game.xml  game_all.xml  game_expansion.xml  game_multiple.xml
test_data/game_family/: game_family_multiple.xml  game_family_not_found.xml  game_family_single.xml
test_data/guild/: guild.xml  guild_with_member_page.xml
test_data/hot_list/: hot_list.xml
test_data/plays/: thing_plays.xml  user_plays.xml
test_data/search/: search.xml  search_exact.xml  search_expansions.xml  search_game_and_accessories.xml  search_result_quotes.xml
test_data/thread/: thread.xml
test_data/user/: user.xml  user_full.xml
