[package]
name = "arnak"
version = "0.4.0"
authors = ["Matthew Thompson <mat@matthewjthompson.co.uk>"]
description = "A Rust library for the BoardGameGeek XML API."
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/MatthewThompson/arnak"
documentation = "https://docs.rs/arnak"
keywords = ["boardgames", "bgg", "boardgamegeek", "bgg-api", "boardgamegeek-api"]
categories = ["api-bindings"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12" }
serde = { version = "1.0.197", features = ["derive"] }
serde-xml-rs = "0.6.0"
tokio = { version = "1", features = ["full","test-util"] }
xml = "0.8.20"

[dev-dependencies]
mockito = "1.5.0"
